--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-debug=true
 management.endpoints.web.exposure.include=*
+logging.file.name=logs/error.log
+logging.level.root=WARN
+logging.level.org.springframework.web=ERROR
+logging.level.com.github.nkgrnkgr=DEBUG
+logging.file.max-size=10MB
