--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,9 @@
 {
   "extends": [
     "config:base"
-  ]
+  ],
+  "schedule": "before 8am on Monday",
+  "minor": {
+    "groupName": "all dependencies"
+  }
 }
